--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
     <div id="info">
         <p>Current Lecture</p>
         <div>
-            <h1 id="facinfo">Keya Patel</h1>
-            <p id="subinfo">OOCUML</p>
+            <h1 id="facinfo"></h1>
+            <p id="subinfo"></p>
         </div>
         <button>Next Lecture</button>
     </div>
+    <script src="app.js"></script>
 </body>
 
 </html>
