Final commit of v1.0
Added Event listener improve ui design added more functinality.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
     </div>
     <div id="footer">
-        <p>Developed by <span>alpha2207</span> aka <span>Ayan Ali</span></p>
+        <p>Developed by <span><a href="https://github.com/alpha2207">alpha2207</a></span> aka <span>Ayan Ali</span></p>
     </div>
     <script src="app.js"></script>
 </body>
