--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
                     <p id="subinfo"></p>
                 </div>
                 <button class="rotate">Next Lecture</button>
+
+                <div class="fulldayinfo d-none"></div>
             </div>
             <div class="back">
                 <p>Next Lecture</p>
@@ -31,11 +33,15 @@
                     <p id="nextsubinfo"></p>
                 </div>
                 <button class="rotate">Current Lecture</button>
+
             </div>
         </div>
     </div>
+    <div>
+
+    </div>
     <div id="footer">
-        <p>Developed by <span><a href="https://github.com/alpha2207">alpha2207</a></span> aka <span>Ayan Ali</span></p>
+        <p>DEVELOPED BY <span><a href="https://github.com/alpha2207">ALPHA2207</a></span> AKA <span><a href="https://www.instagram.com/i_ayan.ali/">AYAN ALI</a></span></p>
     </div>
     <script src="app.js"></script>
 </body>
